@@ -76,6 +76,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4710: Extract directories properly in the zipfile module;
+  allow adding directories to a zipfile.
+
 - Issue #5008: When a file is opened in append mode with the new IO library,
   do an explicit seek to the end of file (so that e.g. tell() returns the
   file size rather than 0). This is consistent with the behaviour of the
